fixed responsive layout problems

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -39,7 +39,7 @@ h1 {
     margin-top: 0;
     text-align: center;
     margin-bottom: 30px;
-      min-width: 450px;
+    min-width:450px;
 
 }
 
@@ -177,10 +177,31 @@ top: -180px;
         margin-right: auto;
         margin-left: auto;
         display: block;
+        min-width:450px;
+        margin-top:50px;
     }
+
+   #hatimg {
+    min-width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+
+}
+
+    #washcarimg {
+    min-width: 450px;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+
+}
+
+
     #hobby_page p {
         margin-left: 3em;
         margin-right: 3em;
+        min-width:450px;
     }
 }
 
@@ -219,8 +240,9 @@ text-align: left;
 
 @media (max-width: 768px) {
     #slogan{ 
-        margin-bottom: 4em;
+        margin-bottom: 6em;
         text-align: center;
+        min-width:450px;
     }
 
     .large-first {
@@ -248,8 +270,8 @@ text-align: left;
     font-size: medium;
     font-family: Arial;
     font-weight: bold;
-    padding-left: 4em;
-    padding-right: 4em;
+    padding-left: 2em;
+    padding-right: 2em;
     min-width: 450px;
 }
 
